# roro

./: .gitignore  Cargo.toml
_bmad-output/brainstorming/: brainstorming-session-2026-05-06-150705.md
_bmad-output/implementation-artifacts/: 1-1-initialize-rust-project-structure.md  1-2-create-configuration-module-with-layered-loading.md  1-3-implement-provider-client-with-openai-api-rust.md  1-4-add-provider-connectivity-validation.md  1-5-implement-auto-detection-of-provider-capabilities.md  1-6-add-provider-switching-functionality.md  1-7-implement-model-download-and-version-management.md  1-8-add-interactive-setup-command.md  1-9-implement-provider-timeout-handling-with-retry.md  2-1-implement-basic-cli-entry-points.md  2-2-implement-interactive-chat-interface.md  2-3-add-scrollable-conversation-history-pane.md  2-4-add-syntax-highlighting-for-code-blocks.md  2-5-auto-save-conversation-history.md  2-6-support-stdin-piping-for-programmatic-mode.md  2-7-output-responses-in-json-format.md  3-1-create-tool-registry-with-permission-system.md  3-2-implement-shell-command-execution-tool.md  3-3-add-command-palette-access-via-slash-prefix.md  3-4-validate-tool-arguments-before-execution.md  3-5-log-all-tool-executions-for-audit.md  3-6-handle-keyboard-interrupts-gracefully.md  4-1-implement-session-save-and-resume.md  4-2-list-and-delete-saved-sessions.md  4-3-persist-session-metadata.md  4-4-preserve-session-state-during-error-recovery.md  5-1-implement-all-cli-flags-and-arguments.md  (+27 more)
roro/: .gitignore  Cargo.toml
roro/src/: lib.rs  main.rs
roro/src/cli/: mod.rs
roro/src/config/: mod.rs
roro/src/provider/: mod.rs
roro/src/session/: mod.rs
roro/src/system/: mod.rs
roro/src/tools/: mod.rs
roro/src/tui/: mod.rs
src/: cli.rs  main.rs  ollama.rs  tools.rs  tui.rs
src/tools/: bash.rs  (+1 more)
(+5 files in other folders)
