[package]
name = "roro"
version = "0.1.0"
edition = "2024"
description = "Minimal, fast, and efficient CLI agent."

[dependencies]
ratatui = "0.30.0"
ollama-rs = { version = "0.3.4", features = ["stream"] }
color-eyre = "0.6.5"
tokio = "1.52.3"
tokio-stream = { version = "0.1.18", features = ["io-util"] }
futures-util = "0.3.32"
