[package]
name = "roro"
version = "0.1.0"
edition = "2024"
description = "Minimal, fast, and efficient CLI agent."

[dependencies]
url = "2.5.8"
tokio = "1.52.3"
ratatui = "0.30.0"
schemars = "1.2.1"
color-eyre = "0.6.5"
futures-util = "0.3.32"
ratatui-textarea = "0.9.1"

serde = { version = "1.0.228", features = ["derive"] }
clap = { version = "4.6.1", features = ["env", "derive"] }
tokio-stream = { version = "0.1.18", features = ["io-util"] }
ollama-rs = { version = "0.3.4", features = ["stream", "macros"] }
