[package]
name = "roro"
version = "0.1.0"
edition = "2024"
authors = ["Rao Nagos"]
description = "Rust rewrite of Mistral Vibe CLI with local LLM provider support"
license = "MIT"
readme = "README.md"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI argument parsing
clap = { version = "4", features = ["derive", "env"] }

# TUI framework
ratatui = "0.27"
crossterm = "0.28"

# OpenAI API compatible client
openai_api_rust = "0.1"

# Configuration
config = "0.14"

# HTTP client (used by openai_api_rust)
reqwest = { version = "0.12", features = ["json"] }

# Error handling
thiserror = "2"
anyhow = "1"

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
opt-level = 2
lto = true
codegen-units = 1
